--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,89 +1,72 @@
 .container {
-  padding: 0 2rem;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
 }
 
 .main {
-  min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
 }
 
 .profile_pic {
-  margin-right: 10px;
-  margin-left: 10px;
   border-radius: 50%;
   border: 2px solid #248a74;
 }
 
 .title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 3rem;
   color: #0ae6b7;
-  text-align: center;
-  display: flex;
-  flex-direction: row;
-  margin: 3.5rem 0;
-  padding: 10px;
-  line-height: 1.5;
-  border-radius: 15px;
   font-family: 'Courier New', Courier, monospace;
   font-weight: lighter;
-  width: fit-content;
+  font-size: 50px;
+  margin-top: 100px;
 }
 
 .text {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 700px;
-  height: fit-content;
-  padding: 20px;
-  font-size: 1.1rem;
   color: white;
   font-family: monospace;
   font-weight: lighter;
-  margin-bottom: 50px;
+  font-size: large;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 500px;
+  margin: 25px 15px;
+  padding: 15px;
+}
+.text p {
+  text-align: center;
 }
 .text h1 {
   color: white;
-  font-family: monospace;
+  font-family: 'Courier New', Courier, monospace;
   font-weight: lighter;
+  font-size: 50px;
+  text-align: center;
 }
 .text h2 {
-  text-align: center;
   color: #f0f3bd;
   font-family: 'Courier New', Courier, monospace;
   font-family: monospace;
   font-weight: lighter;
-  font-size: large;
   padding: 10px;
-  line-height: 1.5;
-  border-radius: 15px;
-  width: fit-content;
+  border-radius: 17px;
 }
 .text h2:hover {
   transition: 0.3s;
   background-color: #0ab48f;
   border-radius: 15px;
 }
-.text p {
-  margin-left: 24px;
+.text .image {
+  border-radius: 8%;
 }
 
 .contact {
   color: #f0f3bd;
-  padding: 10px;
-  line-height: 1.5;
   border-radius: 15px;
 }
 .contact:hover {
@@ -100,45 +83,21 @@
   margin: 0px 10px 0px 10px;
 }
 
+
 /* Mobile Device Styling */
 @media (max-width: 600px) {
-  .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
   .title {
-    font-size: 2rem;
-    margin-right: 30px;
-    margin-left: 30px;
+    font-size: 30px;
+    margin-top: 80px;
   }
   .text {
-    width: 100%;
-    font-size: 1rem;
-  }
-  .text p {
-    margin: 10px 0px 10px 40px;
-    padding: 10px 20px 10px 20px;
+    width: 300px;
   }
   .text h1 {
-    margin-left: 35px;
-  }
-  .text h3 {
-    margin-left: 35px;
-  }
-
-  .logo_display{
-    display: flex;
-    flex-direction: row;
-    margin-left: 10px;
-    margin-right: 10px;
-    margin-bottom: 100px;
-  }
-  .logo {
-    margin: 10px 0px 10px 0px;
+    font-size: 35px;
   }
 }
+
 
 /* Light theme Styling */
 
@@ -157,6 +116,10 @@
 
   .text {
     color: rgb(18, 18, 17);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
   .text h1 {
     color: rgb(18, 18, 17);
