--- a/styles/Projects.module.css
+++ b/styles/Projects.module.css
@@ -1,10 +1,3 @@
-.container {
-  padding: 0 2rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
 
 .main {
   min-height: 100vh;
@@ -33,26 +26,8 @@
   width: fit-content;
 }
 
-.text {
-  display: flex;
-  flex-direction: column;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 700px;
-  height: fit-content;
-  padding: 20px;
-  font-size: 1.1rem;
-  color: white;
-  font-family: monospace;
-  font-weight: lighter;
-  margin-bottom: 50px;
-  }
-  .text h1 {
-    color: white;
-    font-family: monospace;
-    font-weight: lighter;
-  }
+
+
   .text h3 {
     text-align: center;
     color: #f0f3bd;
@@ -70,9 +45,8 @@
     background-color: #0ab48f;
     border-radius: 15px;
   }
-  .text p {
-    margin-left: 24px;
-  }
+
+
 
   /* Mobile Device Styling */
 @media (max-width: 600px) {
@@ -81,6 +55,15 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+  }
+  .main {
+    min-height: 100vh;
+    padding: 4rem 0;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
   .title {
     font-size: 2rem;
@@ -103,17 +86,6 @@
   }
   .text h3 {
     margin-left: 35px;
-  }
-
-  .logo_display{
-    display: flex;
-    flex-direction: row;
-    margin-left: 10px;
-    margin-right: 10px;
-    margin-bottom: 100px;
-  }
-  .logo {
-    margin: 10px 0px 10px 0px;
   }
 }
 
