--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,21 +1,14 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-
+html{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 a {
   color: inherit;
   text-decoration: none;
 }
-
-* {
-  box-sizing: border-box;
-}
-
 
 
 @media (prefers-color-scheme: dark) {
@@ -38,7 +31,6 @@ a {
     background-color: rgb(222, 220, 216);
   }
  
-  .card,
   .footer {
     border-color: #222;
   }
@@ -46,7 +38,10 @@ a {
 
 @media screen and (max-width: 600px) {
   html, body {
-    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
 }
   
